Hs-comp doesn't build with JDK-8139040

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b93
    • Verified

      JDK-8139040 enables -Wuninitialized on linux. It breaks the build in our repo and we can't push to hs-main:

      /oracle/8141629/hotspot/src/share/vm/opto/library_call.cpp: In member function ‘bool LibraryCallKit::inline_string_copy(bool)’:
      /oracle/8141629/hotspot/src/share/vm/opto/library_call.cpp:1268:37: error: ‘count’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
           set_result(_gvn.transform(count));

      /oracle/8141629/hotspot/src/cpu/x86/vm/macroAssembler_x86.cpp: In member function ‘void MacroAssembler::string_compare(Register, Register, Register, Register, Register, XMMRegister, int)’:
      /oracle/8141629/hotspot/src/cpu/x86/vm/macroAssembler_x86.cpp:7037:82: error: ‘scale’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
           load_next_elements(result, cnt2, str1, str2, scale, scale1, scale2, cnt1, ae);

            Assignee:
            Tobias Hartmann
            Reporter:
            Nils Eliasson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: