8141629: Hs-comp doesn't build with JDK-8139040

Fix benign uninitialized vars

Reviewed-by: roland